--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.13"
 prompt = ">=0.4.1,<0.5.0"
+prettytable = "^3.17.0"
 
 [tool.poetry.scripts]
 project = "primitive_db.main:main"
